@@ -29,6 +29,10 @@ import static org.springframework.http.HttpStatus.CREATED;
 import static org.springframework.http.HttpStatus.FORBIDDEN;
 import static org.springframework.http.HttpStatus.NOT_FOUND;
 import static org.springframework.http.HttpStatus.OK;
+import static uk.gov.hmcts.reform.pip.model.account.Roles.INTERNAL_ADMIN_CTSC;
+import static uk.gov.hmcts.reform.pip.model.account.Roles.INTERNAL_ADMIN_LOCAL;
+import static uk.gov.hmcts.reform.pip.model.account.Roles.INTERNAL_SUPER_ADMIN_CTSC;
+import static uk.gov.hmcts.reform.pip.model.account.Roles.INTERNAL_SUPER_ADMIN_LOCAL;
 
 class AccountTest extends AccountHelperBase {
 
@@ -39,16 +43,15 @@ class AccountTest extends AccountHelperBase {
     private static final String DELETE_ENDPOINT = "/account/delete/%s";
     private static final String DELETE_ENDPOINT_V2 = "/account/v2/%s";
     private static final String UPDATE_ACCOUNT_ROLE = "/account/update/%s/%s";
-    private static final String ADMIN_ID = "x-admin-id";
     private static final String SUPER_ADMIN_CTSC_ROLE_NAME = "INTERNAL_SUPER_ADMIN_CTSC";
     private static final String SUPER_ADMIN_LOCAL_ROLE_NAME = "INTERNAL_SUPER_ADMIN_LOCAL";
 
-    private PiUser systemAdminUser;
+    private String systemAdminId;
     private String ctscSuperAdminId;
     private String localSuperAdminId;
     private String localAdminId;
     private String thirdPartyUserId;
-
+    private String internalAdminCtscId;
     private String email;
     private String provenanceId;
 
@@ -62,16 +65,20 @@ class AccountTest extends AccountHelperBase {
     public void startUp() throws JsonProcessingException {
         bearer = Map.of(HttpHeaders.AUTHORIZATION, BEARER + accessToken);
 
-        systemAdminUser = createSystemAdminAccount();
+        PiUser systemAdminUser = createSystemAdminAccount();
+        systemAdminId = systemAdminUser.getUserId();
 
         ctscSuperAdminId = getCreatedAccountUserId(
-            createAccount(generateEmail(), UUID.randomUUID().toString(), Roles.INTERNAL_SUPER_ADMIN_CTSC));
+            createAccount(generateEmail(), UUID.randomUUID().toString(), INTERNAL_SUPER_ADMIN_CTSC, systemAdminId));
 
         localSuperAdminId = getCreatedAccountUserId(
-            createAccount(generateEmail(), UUID.randomUUID().toString(), Roles.INTERNAL_SUPER_ADMIN_LOCAL));
+            createAccount(generateEmail(), UUID.randomUUID().toString(), INTERNAL_SUPER_ADMIN_LOCAL, systemAdminId));
 
         localAdminId = getCreatedAccountUserId(
-            createAccount(generateEmail(), UUID.randomUUID().toString(), Roles.INTERNAL_ADMIN_LOCAL));
+            createAccount(generateEmail(), UUID.randomUUID().toString(), INTERNAL_ADMIN_LOCAL, systemAdminId));
+
+        internalAdminCtscId = getCreatedAccountUserId(
+            createAccount(generateEmail(), UUID.randomUUID().toString(), INTERNAL_ADMIN_CTSC, systemAdminId));
     }
 
     @AfterAll
@@ -94,7 +101,7 @@ class AccountTest extends AccountHelperBase {
 
     @Test
     void shouldBeAbleToCreateAccount() throws Exception {
-        Response createdResponse = createAccount(email, provenanceId);
+        Response createdResponse = createAccount(email, provenanceId, internalAdminCtscId);
         assertThat(createdResponse.getBody().as(CREATED_RESPONSE_TYPE).get(CreationEnum.CREATED_ACCOUNTS).size())
             .isEqualTo(1);
     }
@@ -104,7 +111,7 @@ class AccountTest extends AccountHelperBase {
         List<PiUser> thirdParty = generateThirdParty();
 
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ISSUER_ID, ctscSuperAdminId);
+        headers.put(REQUESTER_ID_HEADER, ctscSuperAdminId);
 
         final Response createResponse = doPostRequest(CREATE_PI_ACCOUNT,
                                                       headers, objectMapper.writeValueAsString(thirdParty));
@@ -117,7 +124,7 @@ class AccountTest extends AccountHelperBase {
         List<PiUser> thirdParty = generateThirdParty();
 
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ISSUER_ID, systemAdminUser.getUserId());
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
 
         final Response createdResponse = doPostRequest(CREATE_PI_ACCOUNT,
                                                       headers, objectMapper.writeValueAsString(thirdParty));
@@ -125,14 +132,17 @@ class AccountTest extends AccountHelperBase {
         assertThat(createdResponse.getStatusCode()).isEqualTo(CREATED.value());
 
         thirdPartyUserId = (String) createdResponse.getBody()
-            .as(CREATED_RESPONSE_TYPE).get(CreationEnum.CREATED_ACCOUNTS).get(0);
+            .as(CREATED_RESPONSE_TYPE).get(CreationEnum.CREATED_ACCOUNTS).getFirst();
     }
 
     @Test
     void shouldBeAbleToGetAnAccountByUserId() throws Exception {
-        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId));
+        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId, internalAdminCtscId));
 
-        Response getUserResponse = doGetRequest(String.format(GET_BY_USER_ID, createdUserId), bearer);
+        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
+
+        Response getUserResponse = doGetRequest(String.format(GET_BY_USER_ID, createdUserId), headers);
 
         assertThat(getUserResponse.getStatusCode()).isEqualTo(OK.value());
         assertThat(getUserResponse.getBody().as(PiUser.class)).matches(user -> user.getEmail().equals(email));
@@ -140,9 +150,12 @@ class AccountTest extends AccountHelperBase {
 
     @Test
     void shouldBeAbleToGetAnAccountByProvenanceId() throws Exception {
-        createAccount(email, provenanceId);
+        createAccount(email, provenanceId, internalAdminCtscId);
 
-        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), bearer);
+        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
+
+        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), headers);
 
         assertThat(getUserResponse.getStatusCode()).isEqualTo(OK.value());
         assertThat(getUserResponse.getBody().as(PiUser.class)).matches(user -> user.getEmail().equals(email));
@@ -150,11 +163,13 @@ class AccountTest extends AccountHelperBase {
 
     @Test
     void checkIfUserIsAuthorisedWhenPublicList() throws Exception {
-        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId));
+        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId, internalAdminCtscId));
+        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
 
         Response getUserResponse = doGetRequest(String.format(USER_IS_AUTHORISED_FOR_LIST, createdUserId,
                                                               ListType.CIVIL_DAILY_CAUSE_LIST, Sensitivity.PUBLIC
-        ), bearer);
+        ), headers);
 
         assertThat(getUserResponse.getStatusCode()).isEqualTo(OK.value());
         assertThat(getUserResponse.getBody().as(Boolean.class)).isTrue();
@@ -162,11 +177,14 @@ class AccountTest extends AccountHelperBase {
 
     @Test
     void checkIfUserIsAuthorisedWhenPrivateList() throws Exception {
-        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId));
+        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId, internalAdminCtscId));
+
+        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
 
         Response getUserResponse = doGetRequest(String.format(USER_IS_AUTHORISED_FOR_LIST, createdUserId,
                                                               ListType.CIVIL_DAILY_CAUSE_LIST, Sensitivity.PRIVATE
-        ), bearer);
+        ), headers);
 
         assertThat(getUserResponse.getStatusCode()).isEqualTo(OK.value());
         assertThat(getUserResponse.getBody().as(Boolean.class)).isTrue();
@@ -174,11 +192,14 @@ class AccountTest extends AccountHelperBase {
 
     @Test
     void checkIfUserIsAuthorisedWhenClassifiedList() throws Exception {
-        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId));
+        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId, internalAdminCtscId));
+
+        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
 
         Response getUserResponse = doGetRequest(String.format(USER_IS_AUTHORISED_FOR_LIST, createdUserId,
                                                               ListType.SJP_PUBLIC_LIST, Sensitivity.CLASSIFIED
-        ), bearer);
+        ), headers);
 
         assertThat(getUserResponse.getStatusCode()).isEqualTo(OK.value());
         assertThat(getUserResponse.getBody().as(Boolean.class)).isTrue();
@@ -186,11 +207,13 @@ class AccountTest extends AccountHelperBase {
 
     @Test
     void checkIfUserIsNotAuthorisedWhenClassifiedList() throws Exception {
-        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId));
+        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId, internalAdminCtscId));
+        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
 
         Response getUserResponse = doGetRequest(String.format(USER_IS_AUTHORISED_FOR_LIST, createdUserId,
                                                               ListType.CIVIL_DAILY_CAUSE_LIST, Sensitivity.CLASSIFIED
-        ), bearer);
+        ), headers);
 
         assertThat(getUserResponse.getStatusCode()).isEqualTo(OK.value());
         assertThat(getUserResponse.getBody().as(Boolean.class)).isFalse();
@@ -198,18 +221,20 @@ class AccountTest extends AccountHelperBase {
 
     @Test
     void shouldBeAbleToUpdateAccount() throws Exception {
-        createAccount(email, provenanceId);
+        createAccount(email, provenanceId, internalAdminCtscId);
+        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
 
         Map<String, String> updateParams = new ConcurrentHashMap<>();
         updateParams.put("lastVerifiedDate", "2024-12-01T01:01:01.123456Z");
         updateParams.put("lastSignedInDate", "2024-12-02T01:01:01.123456Z");
 
-        Response updateResponse = doPutRequestWithBody(String.format(UPDATE_ACCOUNT, provenanceId), bearer,
+        Response updateResponse = doPutRequestWithBody(String.format(UPDATE_ACCOUNT, provenanceId), headers,
                                                        objectMapper.writeValueAsString(updateParams));
 
         assertThat(updateResponse.getStatusCode()).isEqualTo(OK.value());
 
-        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), bearer);
+        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), headers);
         PiUser user = getUserResponse.getBody().as(PiUser.class);
 
         assertThat(user.getLastVerifiedDate()).isEqualTo(LocalDateTime.parse("2024-12-01T01:01:01"));
@@ -218,84 +243,71 @@ class AccountTest extends AccountHelperBase {
 
     @Test
     void shouldBeAbleToDeleteAccount() throws Exception {
-        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId));
+        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId, internalAdminCtscId));
 
-        Response deleteResponse = doDeleteRequest(String.format(DELETE_ENDPOINT, createdUserId), bearer);
+        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
 
+        Response deleteResponse = doDeleteRequest(String.format(DELETE_ENDPOINT, createdUserId), headers);
         assertThat(deleteResponse.getStatusCode()).isEqualTo(OK.value());
 
-        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), bearer);
+        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), headers);
         assertThat(getUserResponse.getStatusCode()).isEqualTo(NOT_FOUND.value());
     }
 
     @Test
     void shouldBeAbleToDeleteAccountV2WhenSystemAdmin() throws Exception {
-        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId));
+        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId, internalAdminCtscId));
 
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ADMIN_ID, systemAdminUser.getUserId());
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
 
         Response deleteResponse = doDeleteRequest(String.format(DELETE_ENDPOINT_V2, createdUserId), headers);
-
         assertThat(deleteResponse.getStatusCode()).isEqualTo(OK.value());
 
-        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), bearer);
+        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), headers);
         assertThat(getUserResponse.getStatusCode()).isEqualTo(NOT_FOUND.value());
     }
 
     @ParameterizedTest
     @EnumSource(value = Roles.class, names = {SUPER_ADMIN_CTSC_ROLE_NAME, SUPER_ADMIN_LOCAL_ROLE_NAME})
-    void shouldBeAbleToDeleteAccountV2WhenSuperAdmin(Roles role) throws Exception {
-        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId, Roles.INTERNAL_ADMIN_LOCAL));
+    void shouldNotBeAbleToDeleteAccountV2WhenSuperAdmin(Roles role) throws Exception {
+        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId, INTERNAL_ADMIN_LOCAL,
+                                                                     systemAdminId));
 
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ADMIN_ID, role == Roles.INTERNAL_SUPER_ADMIN_CTSC ? ctscSuperAdminId : localSuperAdminId);
-
-        Response deleteResponse = doDeleteRequest(String.format(DELETE_ENDPOINT_V2, createdUserId), headers);
-
-        assertThat(deleteResponse.getStatusCode()).isEqualTo(OK.value());
-
-        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), bearer);
-        assertThat(getUserResponse.getStatusCode()).isEqualTo(NOT_FOUND.value());
-    }
-
-    @Test
-    void shouldNotBeAbleToDeleteAccountWhenLocalAdmin() throws Exception {
-        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId, Roles.INTERNAL_ADMIN_LOCAL));
-
-        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ADMIN_ID, localAdminId);
+        headers.put(REQUESTER_ID_HEADER, role == INTERNAL_SUPER_ADMIN_CTSC ? ctscSuperAdminId : localSuperAdminId);
 
         Response deleteResponse = doDeleteRequest(String.format(DELETE_ENDPOINT_V2, createdUserId), headers);
 
         assertThat(deleteResponse.getStatusCode()).isEqualTo(FORBIDDEN.value());
 
-        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), bearer);
+        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), headers);
         assertThat(getUserResponse.getStatusCode()).isEqualTo(OK.value());
     }
 
     @Test
-    void shouldBeAbleToDeleteAccountWhenSso() throws Exception {
-        String createdUserId = getCreatedAccountUserId(
-            createAccount(email, provenanceId, Roles.INTERNAL_ADMIN_LOCAL, UserProvenances.SSO));
+    void shouldNotBeAbleToDeleteAccountWhenLocalAdmin() throws Exception {
+        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId, INTERNAL_ADMIN_LOCAL,
+                                                                     systemAdminId));
 
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ADMIN_ID, localAdminId);
+        headers.put(REQUESTER_ID_HEADER, localAdminId);
 
         Response deleteResponse = doDeleteRequest(String.format(DELETE_ENDPOINT_V2, createdUserId), headers);
 
-        assertThat(deleteResponse.getStatusCode()).isEqualTo(OK.value());
+        assertThat(deleteResponse.getStatusCode()).isEqualTo(FORBIDDEN.value());
 
-        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), bearer);
-        assertThat(getUserResponse.getStatusCode()).isEqualTo(NOT_FOUND.value());
+        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), headers);
+        assertThat(getUserResponse.getStatusCode()).isEqualTo(OK.value());
     }
 
     @Test
     void shouldNotBeAbleToDeleteVerifiedAccountV2WhenNonSystemAdmin() throws Exception {
-        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId));
+        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId, internalAdminCtscId));
 
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ADMIN_ID, ctscSuperAdminId);
+        headers.put(REQUESTER_ID_HEADER, ctscSuperAdminId);
 
         Response deleteResponse = doDeleteRequest(String.format(DELETE_ENDPOINT_V2, createdUserId), headers);
 
@@ -307,7 +319,7 @@ class AccountTest extends AccountHelperBase {
 
     @Test
     void shouldNotBeAbleToDeleteAccountWhenUserNotProvided() throws Exception {
-        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId));
+        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId, internalAdminCtscId));
 
         Response deleteResponse = doDeleteRequest(String.format(DELETE_ENDPOINT_V2, createdUserId), bearer);
 
@@ -320,17 +332,19 @@ class AccountTest extends AccountHelperBase {
     @Test
     void shouldNotBeAbleToUpdateTheirOwnAccount() {
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ADMIN_ID, ctscSuperAdminId);
+        headers.put(REQUESTER_ID_HEADER, ctscSuperAdminId);
 
         Response updateResponse = doPutRequest(
             String.format(UPDATE_ACCOUNT_ROLE, ctscSuperAdminId, SUPER_ADMIN_LOCAL_ROLE_NAME), headers);
 
         assertThat(updateResponse.getStatusCode()).isEqualTo(FORBIDDEN.value());
 
-        PiUser getUserResponse =
-            doGetRequest(String.format(GET_BY_USER_ID, ctscSuperAdminId), bearer).getBody().as(PiUser.class);
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
 
-        assertThat(getUserResponse.getRoles()).isEqualTo(Roles.INTERNAL_SUPER_ADMIN_CTSC);
+        PiUser getUserResponse =
+            doGetRequest(String.format(GET_BY_USER_ID, ctscSuperAdminId), headers).getBody().as(PiUser.class);
+
+        assertThat(getUserResponse.getRoles()).isEqualTo(INTERNAL_SUPER_ADMIN_CTSC);
     }
 
     @Test
@@ -340,84 +354,95 @@ class AccountTest extends AccountHelperBase {
 
         assertThat(updateResponse.getStatusCode()).isEqualTo(FORBIDDEN.value());
 
-        PiUser getUserResponse =
-            doGetRequest(String.format(GET_BY_USER_ID, ctscSuperAdminId), bearer).getBody().as(PiUser.class);
+        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
 
-        assertThat(getUserResponse.getRoles()).isEqualTo(Roles.INTERNAL_SUPER_ADMIN_CTSC);
+        PiUser getUserResponse =
+            doGetRequest(String.format(GET_BY_USER_ID, ctscSuperAdminId), headers).getBody().as(PiUser.class);
+
+        assertThat(getUserResponse.getRoles()).isEqualTo(INTERNAL_SUPER_ADMIN_CTSC);
     }
 
     @Test
     void shouldBeAbleToUpdateRoleIfSystemAdmin() throws JsonProcessingException {
         String createdUserId = getCreatedAccountUserId(
-            createAccount(email, provenanceId, Roles.INTERNAL_ADMIN_LOCAL));
+            createAccount(email, provenanceId, INTERNAL_ADMIN_LOCAL, systemAdminId));
 
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ADMIN_ID, systemAdminUser.getUserId());
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
 
         Response updateResponse = doPutRequest(
             String.format(UPDATE_ACCOUNT_ROLE, createdUserId, SUPER_ADMIN_CTSC_ROLE_NAME), headers);
 
         assertThat(updateResponse.getStatusCode()).isEqualTo(OK.value());
 
-        PiUser getUserResponse =
-            doGetRequest(String.format(GET_BY_USER_ID, createdUserId), bearer).getBody().as(PiUser.class);
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
 
-        assertThat(getUserResponse.getRoles()).isEqualTo(Roles.INTERNAL_SUPER_ADMIN_CTSC);
+        PiUser getUserResponse =
+            doGetRequest(String.format(GET_BY_USER_ID, createdUserId), headers).getBody().as(PiUser.class);
+
+        assertThat(getUserResponse.getRoles()).isEqualTo(INTERNAL_SUPER_ADMIN_CTSC);
     }
 
     @ParameterizedTest
     @EnumSource(value = Roles.class, names = {SUPER_ADMIN_CTSC_ROLE_NAME, SUPER_ADMIN_LOCAL_ROLE_NAME})
     void shouldBeAbleToUpdateRoleIfSuperAdmin(Roles role) throws JsonProcessingException {
         String createdUserId = getCreatedAccountUserId(
-            createAccount(email, provenanceId, Roles.INTERNAL_ADMIN_LOCAL));
+            createAccount(email, provenanceId, INTERNAL_ADMIN_LOCAL, systemAdminId));
 
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ADMIN_ID, role == Roles.INTERNAL_SUPER_ADMIN_CTSC ? ctscSuperAdminId : localSuperAdminId);
+        headers.put(REQUESTER_ID_HEADER, role == INTERNAL_SUPER_ADMIN_CTSC ? ctscSuperAdminId : localSuperAdminId);
 
         Response updateResponse = doPutRequest(
             String.format(UPDATE_ACCOUNT_ROLE, createdUserId, SUPER_ADMIN_CTSC_ROLE_NAME), headers);
 
         assertThat(updateResponse.getStatusCode()).isEqualTo(OK.value());
 
-        PiUser getUserResponse =
-            doGetRequest(String.format(GET_BY_USER_ID, createdUserId), bearer).getBody().as(PiUser.class);
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
 
-        assertThat(getUserResponse.getRoles()).isEqualTo(Roles.INTERNAL_SUPER_ADMIN_CTSC);
+        PiUser getUserResponse =
+            doGetRequest(String.format(GET_BY_USER_ID, createdUserId), headers).getBody().as(PiUser.class);
+
+        assertThat(getUserResponse.getRoles()).isEqualTo(INTERNAL_SUPER_ADMIN_CTSC);
     }
 
     @Test
     void shouldNotBeAbleToUpdateRoleIfNotSuperAdmin() throws JsonProcessingException {
         String createdUserId = getCreatedAccountUserId(
-            createAccount(email, provenanceId, Roles.INTERNAL_ADMIN_LOCAL));
+            createAccount(email, provenanceId, INTERNAL_ADMIN_LOCAL, systemAdminId));
 
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ADMIN_ID, localAdminId);
+        headers.put(REQUESTER_ID_HEADER, localAdminId);
 
         Response updateResponse = doPutRequest(
             String.format(UPDATE_ACCOUNT_ROLE, createdUserId, SUPER_ADMIN_CTSC_ROLE_NAME), headers);
 
         assertThat(updateResponse.getStatusCode()).isEqualTo(FORBIDDEN.value());
 
-        PiUser getUserResponse =
-            doGetRequest(String.format(GET_BY_USER_ID, createdUserId), bearer).getBody().as(PiUser.class);
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
 
-        assertThat(getUserResponse.getRoles()).isEqualTo(Roles.INTERNAL_ADMIN_LOCAL);
+        PiUser getUserResponse =
+            doGetRequest(String.format(GET_BY_USER_ID, createdUserId), headers).getBody().as(PiUser.class);
+
+        assertThat(getUserResponse.getRoles()).isEqualTo(INTERNAL_ADMIN_LOCAL);
     }
 
     @Test
     void shouldNotBeAbleToUpdateRoleIfVerifiedAccount() throws JsonProcessingException {
-        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId));
+        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId, internalAdminCtscId));
 
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ADMIN_ID, localSuperAdminId);
+        headers.put(REQUESTER_ID_HEADER, localSuperAdminId);
 
         Response updateResponse = doPutRequest(
             String.format(UPDATE_ACCOUNT_ROLE, createdUserId, SUPER_ADMIN_CTSC_ROLE_NAME), headers);
 
         assertThat(updateResponse.getStatusCode()).isEqualTo(FORBIDDEN.value());
 
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
+
         PiUser getUserResponse =
-            doGetRequest(String.format(GET_BY_USER_ID, createdUserId), bearer).getBody().as(PiUser.class);
+            doGetRequest(String.format(GET_BY_USER_ID, createdUserId), headers).getBody().as(PiUser.class);
 
         assertThat(getUserResponse.getRoles()).isEqualTo(Roles.VERIFIED);
     }
@@ -425,20 +450,22 @@ class AccountTest extends AccountHelperBase {
     @Test
     void shouldBeAbleToUpdateRoleIfSso() throws JsonProcessingException {
         String createdUserId = getCreatedAccountUserId(
-            createAccount(email, provenanceId, Roles.INTERNAL_ADMIN_LOCAL, UserProvenances.SSO));
+            createAccount(email, provenanceId, INTERNAL_ADMIN_LOCAL, UserProvenances.SSO, systemAdminId));
 
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ADMIN_ID, localAdminId);
+        headers.put(REQUESTER_ID_HEADER, localAdminId);
 
         Response updateResponse = doPutRequest(
             String.format(UPDATE_ACCOUNT_ROLE, createdUserId, SUPER_ADMIN_CTSC_ROLE_NAME), headers);
 
         assertThat(updateResponse.getStatusCode()).isEqualTo(OK.value());
 
-        PiUser getUserResponse =
-            doGetRequest(String.format(GET_BY_USER_ID, createdUserId), bearer).getBody().as(PiUser.class);
+        headers.put(REQUESTER_ID_HEADER, systemAdminId);
 
-        assertThat(getUserResponse.getRoles()).isEqualTo(Roles.INTERNAL_SUPER_ADMIN_CTSC);
+        PiUser getUserResponse =
+            doGetRequest(String.format(GET_BY_USER_ID, createdUserId), headers).getBody().as(PiUser.class);
+
+        assertThat(getUserResponse.getRoles()).isEqualTo(INTERNAL_SUPER_ADMIN_CTSC);
     }
 
 }
