@@ -20,6 +20,7 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.ActiveProfiles;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
@@ -30,6 +31,7 @@ import uk.gov.hmcts.reform.pip.account.management.model.account.AzureAccount;
 import uk.gov.hmcts.reform.pip.account.management.model.account.CreationEnum;
 import uk.gov.hmcts.reform.pip.account.management.model.account.PiUser;
 import uk.gov.hmcts.reform.pip.account.management.model.errored.ErroredAzureAccount;
+import uk.gov.hmcts.reform.pip.account.management.service.authorisation.AccountAuthorisationService;
 import uk.gov.hmcts.reform.pip.account.management.utils.IntegrationTestBase;
 import uk.gov.hmcts.reform.pip.model.account.Roles;
 import uk.gov.hmcts.reform.pip.model.account.UserProvenances;
@@ -63,11 +65,10 @@ class AzureAccountTest extends IntegrationTestBase {
     private static final String AZURE_PATH = "/azure/";
 
     private static final String EMAIL = "test_account_admin@hmcts.net";
-    private static final String INVALID_EMAIL = "ab";
     private static final String FIRST_NAME = "First name";
     private static final String SURNAME = "Surname";
-    private static final String ISSUER_ID = "1234-1234-1234-1234";
-    private static final String ISSUER_HEADER = "x-issuer-id";
+    private static final UUID REQUESTER_ID = UUID.randomUUID();
+    private static final String REQUESTER_ID_HEADER = "x-requester-id";
     private static final String GIVEN_NAME = "Given Name";
     private static final String ID = "1234";
     private static final String UNAUTHORIZED_ROLE = "APPROLE_unknown.authorized";
@@ -94,7 +95,7 @@ class AzureAccountTest extends IntegrationTestBase {
 
     private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
 
-    private static final PiUser VALID_USER = createUser(true, UUID.randomUUID().toString());
+    private static final PiUser VALID_USER = createUser(UUID.randomUUID().toString());
 
     @Autowired
     private MockMvc mockMvc;
@@ -111,9 +112,12 @@ class AzureAccountTest extends IntegrationTestBase {
     @Mock
     private ClientConfiguration clientConfiguration;
 
-    private static PiUser createUser(boolean valid, String id) {
+    @MockitoBean
+    private AccountAuthorisationService accountAuthorisationService;
+
+    private static PiUser createUser(String id) {
         PiUser user = new PiUser();
-        user.setEmail(valid ? EMAIL : INVALID_EMAIL);
+        user.setEmail(EMAIL);
         user.setProvenanceUserId(id);
         user.setUserProvenance(UserProvenances.PI_AAD);
         user.setRoles(Roles.INTERNAL_ADMIN_CTSC);
@@ -152,6 +156,7 @@ class AzureAccountTest extends IntegrationTestBase {
 
         when(graphClient.users()).thenReturn(usersRequestBuilder);
         when(usersRequestBuilder.post(any())).thenReturn(userToReturn);
+        when(accountAuthorisationService.userCanCreateAzureAccount(any())).thenReturn(true);
     }
 
     @AfterEach
@@ -179,7 +184,7 @@ class AzureAccountTest extends IntegrationTestBase {
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder = MockMvcRequestBuilders
             .post(AZURE_URL)
             .content(OBJECT_MAPPER.writeValueAsString(List.of(azureAccount)))
-            .header(ISSUER_HEADER, ISSUER_ID)
+            .header(REQUESTER_ID_HEADER, REQUESTER_ID)
             .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult response = mockMvc.perform(mockHttpServletRequestBuilder).andExpect(status().isOk()).andReturn();
@@ -198,7 +203,7 @@ class AzureAccountTest extends IntegrationTestBase {
                      "1 Created account should be returned"
         );
 
-        AzureAccount returnedAzureAccount = accounts.get(CreationEnum.CREATED_ACCOUNTS).get(0);
+        AzureAccount returnedAzureAccount = accounts.get(CreationEnum.CREATED_ACCOUNTS).getFirst();
 
         assertEquals(ID, returnedAzureAccount.getAzureAccountId(), TEST_MESSAGE_ID);
         assertEquals(EMAIL, returnedAzureAccount.getEmail(), TEST_MESSAGE_EMAIL);
@@ -227,7 +232,7 @@ class AzureAccountTest extends IntegrationTestBase {
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder = MockMvcRequestBuilders
             .post(AZURE_URL)
             .content(OBJECT_MAPPER.writeValueAsString(List.of(azureAccount)))
-            .header(ISSUER_HEADER, ISSUER_ID)
+            .header(REQUESTER_ID_HEADER, REQUESTER_ID)
             .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult response = mockMvc.perform(mockHttpServletRequestBuilder).andExpect(status().isOk()).andReturn();
@@ -245,7 +250,7 @@ class AzureAccountTest extends IntegrationTestBase {
         );
 
         AzureAccount returnedValidAzureAccount = OBJECT_MAPPER.convertValue(
-            accounts.get(CreationEnum.CREATED_ACCOUNTS).get(0), AzureAccount.class
+            accounts.get(CreationEnum.CREATED_ACCOUNTS).getFirst(), AzureAccount.class
         );
 
         assertEquals(ID, returnedValidAzureAccount.getAzureAccountId(), TEST_MESSAGE_ID);
@@ -255,9 +260,9 @@ class AzureAccountTest extends IntegrationTestBase {
         assertEquals(Roles.INTERNAL_ADMIN_CTSC, returnedValidAzureAccount.getRole(), TEST_MESSAGE_ROLE);
 
         ErroredAzureAccount returnedInvalidAccount = OBJECT_MAPPER.convertValue(
-            accounts.get(CreationEnum.ERRORED_ACCOUNTS).get(0), ErroredAzureAccount.class);
+            accounts.get(CreationEnum.ERRORED_ACCOUNTS).getFirst(), ErroredAzureAccount.class);
 
-        assertEquals(UNSENT_EMAIL_MESSAGE, returnedInvalidAccount.getErrorMessages().get(0), MESSAGE_ERROR);
+        assertEquals(UNSENT_EMAIL_MESSAGE, returnedInvalidAccount.getErrorMessages().getFirst(), MESSAGE_ERROR);
     }
 
     @Test
@@ -276,7 +281,7 @@ class AzureAccountTest extends IntegrationTestBase {
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder = MockMvcRequestBuilders
             .post(AZURE_URL)
             .content(OBJECT_MAPPER.writeValueAsString(List.of(azureAccount)))
-            .header(ISSUER_HEADER, ISSUER_ID)
+            .header(REQUESTER_ID_HEADER, REQUESTER_ID)
             .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult response = mockMvc.perform(mockHttpServletRequestBuilder)
@@ -308,7 +313,7 @@ class AzureAccountTest extends IntegrationTestBase {
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder = MockMvcRequestBuilders
             .post(AZURE_URL)
             .content(OBJECT_MAPPER.writeValueAsString(List.of(azureAccount)))
-            .header(ISSUER_HEADER, ISSUER_ID)
+            .header(REQUESTER_ID_HEADER, REQUESTER_ID)
             .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult response = mockMvc.perform(mockHttpServletRequestBuilder)
@@ -330,7 +335,7 @@ class AzureAccountTest extends IntegrationTestBase {
 
         List<Object> accountList = accounts.get(CreationEnum.ERRORED_ACCOUNTS);
         ErroredAzureAccount erroredAccount = OBJECT_MAPPER.convertValue(
-            accountList.get(0),
+            accountList.getFirst(),
             ErroredAzureAccount.class
         );
 
@@ -339,7 +344,7 @@ class AzureAccountTest extends IntegrationTestBase {
         assertEquals(FIRST_NAME, erroredAccount.getFirstName(), TEST_MESSAGE_FIRST_NAME);
         assertEquals(SURNAME, erroredAccount.getSurname(), TEST_MESSAGE_SURNAME);
         assertEquals(Roles.INTERNAL_ADMIN_CTSC, erroredAccount.getRole(), TEST_MESSAGE_ROLE);
-        assertEquals(EMAIL_VALIDATION_MESSAGE, erroredAccount.getErrorMessages().get(0),
+        assertEquals(EMAIL_VALIDATION_MESSAGE, erroredAccount.getErrorMessages().getFirst(),
                      INVALID_EMAIL_ERROR
         );
     }
@@ -354,7 +359,7 @@ class AzureAccountTest extends IntegrationTestBase {
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder = MockMvcRequestBuilders
             .post(AZURE_URL)
             .content(OBJECT_MAPPER.writeValueAsString(List.of(azureAccount)))
-            .header(ISSUER_HEADER, ISSUER_ID)
+            .header(REQUESTER_ID_HEADER, REQUESTER_ID)
             .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult response = mockMvc.perform(mockHttpServletRequestBuilder)
@@ -376,7 +381,7 @@ class AzureAccountTest extends IntegrationTestBase {
 
         List<Object> accountList = accounts.get(CreationEnum.ERRORED_ACCOUNTS);
         ErroredAzureAccount erroredAccount = OBJECT_MAPPER.convertValue(
-            accountList.get(0),
+            accountList.getFirst(),
             ErroredAzureAccount.class
         );
 
@@ -385,7 +390,7 @@ class AzureAccountTest extends IntegrationTestBase {
         assertNull(erroredAccount.getFirstName(), "Firstname has not been sent");
         assertEquals(SURNAME, erroredAccount.getSurname(), TEST_MESSAGE_SURNAME);
         assertEquals(Roles.INTERNAL_ADMIN_CTSC, erroredAccount.getRole(), TEST_MESSAGE_ROLE);
-        assertEquals(INVALID_FIRST_NAME_MESSAGE, erroredAccount.getErrorMessages().get(0),
+        assertEquals(INVALID_FIRST_NAME_MESSAGE, erroredAccount.getErrorMessages().getFirst(),
                      "Error message is displayed for an invalid name"
         );
     }
@@ -416,7 +421,7 @@ class AzureAccountTest extends IntegrationTestBase {
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder = MockMvcRequestBuilders
             .post(AZURE_URL)
             .content(OBJECT_MAPPER.writeValueAsString(List.of(azureAccount)))
-            .header(ISSUER_HEADER, ISSUER_ID)
+            .header(REQUESTER_ID_HEADER, REQUESTER_ID)
             .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult response = mockMvc.perform(mockHttpServletRequestBuilder)
@@ -463,7 +468,7 @@ class AzureAccountTest extends IntegrationTestBase {
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder = MockMvcRequestBuilders
             .post(AZURE_URL)
             .content(OBJECT_MAPPER.writeValueAsString(List.of(azureAccount)))
-            .header(ISSUER_HEADER, ISSUER_ID)
+            .header(REQUESTER_ID_HEADER, REQUESTER_ID)
             .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult response = mockMvc.perform(mockHttpServletRequestBuilder)
@@ -484,10 +489,10 @@ class AzureAccountTest extends IntegrationTestBase {
         );
 
         ErroredAzureAccount returnedInvalidAccount = OBJECT_MAPPER.convertValue(
-            accounts.get(CreationEnum.ERRORED_ACCOUNTS).get(0), ErroredAzureAccount.class
+            accounts.get(CreationEnum.ERRORED_ACCOUNTS).getFirst(), ErroredAzureAccount.class
         );
 
-        assertEquals(UNSENT_EMAIL_MESSAGE, returnedInvalidAccount.getErrorMessages().get(0), MESSAGE_ERROR);
+        assertEquals(UNSENT_EMAIL_MESSAGE, returnedInvalidAccount.getErrorMessages().getFirst(), MESSAGE_ERROR);
     }
 
     @Test
@@ -500,7 +505,7 @@ class AzureAccountTest extends IntegrationTestBase {
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder = MockMvcRequestBuilders
             .post(AZURE_URL)
             .content(OBJECT_MAPPER.writeValueAsString(List.of(azureAccount)))
-            .header(ISSUER_HEADER, ISSUER_ID)
+            .header(REQUESTER_ID_HEADER, REQUESTER_ID)
             .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult response = mockMvc.perform(mockHttpServletRequestBuilder)
@@ -522,7 +527,7 @@ class AzureAccountTest extends IntegrationTestBase {
 
         List<Object> acccountList = accounts.get(CreationEnum.ERRORED_ACCOUNTS);
         ErroredAzureAccount erroredAccount = OBJECT_MAPPER.convertValue(
-            acccountList.get(0),
+            acccountList.getFirst(),
             ErroredAzureAccount.class
         );
 
@@ -531,7 +536,7 @@ class AzureAccountTest extends IntegrationTestBase {
         assertEquals(FIRST_NAME, erroredAccount.getFirstName(), TEST_MESSAGE_FIRST_NAME);
         assertEquals(SURNAME, erroredAccount.getSurname(), TEST_MESSAGE_SURNAME);
         assertNull(erroredAccount.getRole(), "Role is not null");
-        assertEquals(INVALID_ROLE_MESSAGE, erroredAccount.getErrorMessages().get(0),
+        assertEquals(INVALID_ROLE_MESSAGE, erroredAccount.getErrorMessages().getFirst(),
                      "Error message is displayed for an invalid name"
         );
     }
@@ -557,7 +562,7 @@ class AzureAccountTest extends IntegrationTestBase {
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder = MockMvcRequestBuilders
             .post(AZURE_URL)
             .content(OBJECT_MAPPER.writeValueAsString(List.of(azureAccount)))
-            .header(ISSUER_HEADER, ISSUER_ID)
+            .header(REQUESTER_ID_HEADER, REQUESTER_ID)
             .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult response = mockMvc.perform(mockHttpServletRequestBuilder).andExpect(status().isOk()).andReturn();
@@ -573,14 +578,14 @@ class AzureAccountTest extends IntegrationTestBase {
         assertEquals(0, accounts.get(CreationEnum.CREATED_ACCOUNTS).size(), "0 created account returned");
 
         ErroredAzureAccount erroredAccount = OBJECT_MAPPER.convertValue(
-            accounts.get(CreationEnum.ERRORED_ACCOUNTS).get(0), ErroredAzureAccount.class);
+            accounts.get(CreationEnum.ERRORED_ACCOUNTS).getFirst(), ErroredAzureAccount.class);
 
         assertNull(erroredAccount.getAzureAccountId(), "Errored azureAccount does not have ID");
         assertEquals(EMAIL, erroredAccount.getEmail(), TEST_MESSAGE_EMAIL);
         assertEquals(FIRST_NAME, erroredAccount.getFirstName(), TEST_MESSAGE_FIRST_NAME);
         assertEquals(SURNAME, erroredAccount.getSurname(), TEST_MESSAGE_SURNAME);
         assertEquals(Roles.INTERNAL_ADMIN_CTSC, erroredAccount.getRole(), TEST_MESSAGE_ROLE);
-        assertEquals(DIRECTORY_ERROR, erroredAccount.getErrorMessages().get(0),
+        assertEquals(DIRECTORY_ERROR, erroredAccount.getErrorMessages().getFirst(),
                      "Error message matches directory message"
         );
     }
@@ -592,7 +597,7 @@ class AzureAccountTest extends IntegrationTestBase {
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder = MockMvcRequestBuilders
             .post(AZURE_URL)
             .content(duplicateKeyString)
-            .header(ISSUER_HEADER, ISSUER_ID)
+            .header(REQUESTER_ID_HEADER, REQUESTER_ID)
             .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult response = mockMvc.perform(mockHttpServletRequestBuilder)
@@ -637,7 +642,7 @@ class AzureAccountTest extends IntegrationTestBase {
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder = MockMvcRequestBuilders
             .post(AZURE_URL)
             .content(OBJECT_MAPPER.writeValueAsString(List.of(validAzureAccount, invalidAzureAccount)))
-            .header(ISSUER_HEADER, ISSUER_ID)
+            .header(REQUESTER_ID_HEADER, REQUESTER_ID)
             .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult response = mockMvc.perform(mockHttpServletRequestBuilder).andExpect(status().isOk()).andReturn();
@@ -657,7 +662,7 @@ class AzureAccountTest extends IntegrationTestBase {
         );
 
         AzureAccount returnedValidAzureAccount = OBJECT_MAPPER.convertValue(
-            accounts.get(CreationEnum.CREATED_ACCOUNTS).get(0), AzureAccount.class);
+            accounts.get(CreationEnum.CREATED_ACCOUNTS).getFirst(), AzureAccount.class);
 
         assertEquals(ID, returnedValidAzureAccount.getAzureAccountId(), TEST_MESSAGE_ID);
         assertEquals(EMAIL, returnedValidAzureAccount.getEmail(), TEST_MESSAGE_EMAIL);
@@ -666,14 +671,14 @@ class AzureAccountTest extends IntegrationTestBase {
         assertEquals(Roles.INTERNAL_ADMIN_CTSC, returnedValidAzureAccount.getRole(), TEST_MESSAGE_ROLE);
 
         ErroredAzureAccount returnedInvalidAccount = OBJECT_MAPPER.convertValue(
-            accounts.get(CreationEnum.ERRORED_ACCOUNTS).get(0), ErroredAzureAccount.class);
+            accounts.get(CreationEnum.ERRORED_ACCOUNTS).getFirst(), ErroredAzureAccount.class);
 
         assertNull(returnedInvalidAccount.getAzureAccountId(), "AzureAccount ID should be null");
         assertEquals("abc.test", returnedInvalidAccount.getEmail(), TEST_MESSAGE_EMAIL);
         assertEquals(FIRST_NAME, returnedInvalidAccount.getFirstName(), TEST_MESSAGE_FIRST_NAME);
         assertEquals(SURNAME, returnedInvalidAccount.getSurname(), TEST_MESSAGE_SURNAME);
         assertEquals(Roles.INTERNAL_ADMIN_CTSC, returnedInvalidAccount.getRole(), TEST_MESSAGE_ROLE);
-        assertEquals(EMAIL_VALIDATION_MESSAGE, returnedInvalidAccount.getErrorMessages().get(0),
+        assertEquals(EMAIL_VALIDATION_MESSAGE, returnedInvalidAccount.getErrorMessages().getFirst(),
                      INVALID_EMAIL_ERROR
         );
     }
@@ -681,10 +686,12 @@ class AzureAccountTest extends IntegrationTestBase {
     @Test
     @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
     void testUnauthorizedCreateAccount() throws Exception {
+        when(accountAuthorisationService.userCanCreateAzureAccount(any())).thenReturn(false);
+
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder = MockMvcRequestBuilders
             .post(AZURE_URL)
             .content("[]")
-            .header(ISSUER_HEADER, ISSUER_ID)
+            .header(REQUESTER_ID_HEADER, REQUESTER_ID)
             .contentType(MediaType.APPLICATION_JSON);
 
         MvcResult mvcResult =
@@ -711,7 +718,7 @@ class AzureAccountTest extends IntegrationTestBase {
     @WithMockUser(username = UNAUTHORIZED_USERNAME, authorities = {UNAUTHORIZED_ROLE})
     void testUnauthorizedGetAzureUserInfo() throws Exception {
         MockHttpServletRequestBuilder request = MockMvcRequestBuilders
-            .get(ROOT_URL + "/azure/" + VALID_USER.getProvenanceUserId());
+            .get(ROOT_URL + AZURE_PATH + VALID_USER.getProvenanceUserId());
 
         MvcResult mvcResult = mockMvc.perform(request).andExpect(status().isForbidden()).andReturn();
 
